fixed Photos bug: image stretches if it's smaller than the container in

--- a/src/components/apps/photos/Photos.css
+++ b/src/components/apps/photos/Photos.css
@@ -25,7 +25,10 @@
 
 .performance-wrapper {
   height: 100%;
+  width: 100%;
   display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .performance-wrapper > img {
